# CelesteAutosplitterLinux

./: .gitignore  Cargo.toml  splits.toml
frontend/: Cargo.toml
frontend/src/: main.rs  splits.rs  term.rs  util.rs
src/: main.rs
tracer/: Cargo.toml
tracer/src/: lib.rs  tracer.rs
