[package]
name = "frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
celeste_autosplit_tracer = { path="../tracer" }

clap = "2"
dialoguer = "0.8"
serde = { version="1.0", features=["derive"] }
toml = "0.5"
