[package]
name = "frontend"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
celeste_autosplit_tracer = { path="../tracer" }

clap = "2"
console = "0.14"
dialoguer = "0.8"
serde = { version="1.0", features=["derive"] }
toml = "0.5"
